[gd_scene load_steps=2 format=3 uid="uid://b6r843asd5ybs"]

[ext_resource type="Script" uid="uid://dp44v45ani7to" path="res://scripts/menu.gd" id="1_yqeox"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_yqeox")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.0
offset_top = -51.5
offset_right = 161.0
offset_bottom = 51.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="Title" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "Breakthrough"

[node name="VBoxContainer" type="VBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PlayBtn" type="Button" parent="UI/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="SettingBtn" type="Button" parent="UI/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="QuitBtn" type="Button" parent="UI/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="UI/VBoxContainer/VBoxContainer/PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/VBoxContainer/SettingBtn" to="." method="_on_setting_btn_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/VBoxContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
